@@ -290,6 +290,8 @@ else
 		$a['settlement'] = true;
 	if (!empty($CONFIG['phpui']['default_assignment_period']))
 		$a['period'] = $CONFIG['phpui']['default_assignment_period'];
+	if (!empty($CONFIG['phpui']['default_cutomer_assignment_nodes']))
+		$a['nodes'] = array($a['nodes'] = true ); 
 }
 
 $expired = isset($_GET['expired']) ? $_GET['expired'] : false;
